create image field for post

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-.idea
 /app/*.db3
+/app/bootstrap.php.cache
+/app/cache/*
+!app/cache/.gitkeep
 /app/config/parameters.yml
+/app/logs/*
+!app/logs/.gitkeep
+/app/phpunit.xml
+/bin/
+/vendor/
+/web/bundles/
+/web/media
+!/web/media/post/.empty
+
+web/.htaccess
+build.properties
+.idea/
+.DS_STORE
 /build/
-/phpunit.xml
+/web/css/*
+/web/js/*
+/web/files/*
+/logs/*
+!/logs/.gitkeep
+!.gitkeep
+
 /var/*
 !/var/cache
 /var/cache/*
@@ -14,5 +35,3 @@
 /var/sessions/*
 !var/sessions/.gitkeep
 !var/SymfonyRequirements.php
-/vendor/
-/web/bundles/
