--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,3 +10,10 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+comur_image:
+    resource: "@ComurImageBundle/Resources/config/routing.yml"
+    prefix:   /
