--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -45,9 +45,6 @@ security:
     encoders:
         FOS\UserBundle\Model\UserInterface: sha512
 
-    acl:
-        connection: default
-
     access_control:
             # URL of FOSUserBundle which need to be available to anonymous users
             - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
@@ -63,5 +60,12 @@ security:
             # Secured part of the site
             # This config requires being logged for the whole site and having the admin role for the admin part.
             # Change these rules to adapt them to your needs
-            - { path: ^/admin/, role: [ROLE_ADMIN, ROLE_SONATA_ADMIN] }
+            - { path: ^/admin/, role: IS_AUTHENTICATED_FULLY }
             - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+    role_hierarchy:
+        ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
+    acl:
+        connection: default
