--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "sonata-project/admin-bundle": "^3.2",
         "sonata-project/doctrine-orm-admin-bundle": "^3.0",
         "comur/image-bundle": "^1.1",
-        "sonata-project/user-bundle": "^3.0"
+        "sonata-project/user-bundle": "^3.0",
+        "sonata-project/formatter-bundle": "^3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
